# wslcb-licensing-tracker

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .socraticodecontextartifacts.json  AGENTS.md  LICENSE  PLAYBOOKS.md  README.md  address_validator.py  admin_audit.py  admin_auth.py  admin_routes.py  alembic.ini  api_routes.py  app.py  backfill_diffs.py  backfill_provenance.py  backfill_snapshots.py  cli.py  database.py  db.py  display.py  endorsements.py  endorsements_admin.py  entities.py  integrity.py  link_records.py  log_config.py  migrate_locations.py  package-lock.json  package.json  parser.py  pipeline.py  pyproject.toml  queries.py  rebuild.py  requirements.txt  schema.py  scraper.py  (+6 more)
.claude/: settings.json
.claude/hooks/: socraticode-reminder.sh
.claude/skills/: managing-skills  managing-skills-claude  orchestrating-issue-backlog  orchestrating-issue-backlog-claude  reviewing-architecture-claude  reviewing-code-claude  reviewing-code-python-fastapi  shipping-work-claude  shipping-work-python-fastapi
.skills/: doctor.sh
alembic/: env.py
alembic/versions/: 0001_baseline_postgresql_schema.py  0002_fts.py  0003_timestamp_columns.py  0004_nullable_std_address_line_2.py
deploy/: wslcb-healthcheck.timer  wslcb-task@.service  wslcb-web.service
docs/: DEPLOYMENT.md  SCHEMA.md  SKILLS.md  SOURCE_PAGE.md  STYLE.md  application-approval-linking-analysis.md  approved-data-gap-investigation.md  architecture-review.md  linking-analysis-charts.html
docs/plans/: 2026-03-07-entities-landing-page-design.md  2026-03-10-address-validator-v2-design.md  2026-03-10-address-validator-v2.md  2026-03-19-remove-endorsement-alias-design.md  2026-03-19-ui-ux-style-guidelines-design.md  2026-03-19-ui-ux-style-guidelines.md  2026-03-20-sqlite-to-postgresql-design.md  2026-03-20-sqlite-to-postgresql-phase-1-foundation.md  2026-03-20-sqlite-to-postgresql-phase-2-core-data-layer.md  2026-03-21-sqlite-to-postgresql-phase-3-query-layer.md  2026-03-21-sqlite-to-postgresql-phase-4-web-layer.md  2026-03-21-sqlite-to-postgresql-phase-5-fts.md  2026-03-21-sqlite-to-postgresql-phase-6-ops-cutover.md  2026-03-22-pg-queries-module-split-design.md  2026-03-22-pg-queries-split.md  2026-03-22-pg-scraper-tests-design.md  2026-03-23-backlog-clearance-batch-2.md  2026-03-23-build-id-design.md  2026-03-23-build-id-plan.md  2026-03-23-post-scrape-address-standardization-design.md  2026-03-23-post-scrape-address-standardization-plan.md  2026-03-24-address-validator-hardening-design.md  2026-03-24-async-engine-dispose-design.md  2026-03-24-unified-validate-design.md  2026-03-27-admin-test-hardening-design.md  2026-03-28-env-restructure-ops-design.md  2026-03-28-env-restructure-ops-plan.md  2026-04-02-address-validator-500-retry-rate-limit-design.md  2026-07-09-compress-diffs-design.md  2026-07-09-compress-diffs-plan.md  2026-07-09-disk-hygiene-design.md  2026-07-10-disk-hygiene-plan.md
docs/research/: ENTITY_AUDIT_REPORT.md  TEMPLATE_REVIEW.md  doc-review-findings.md  person-vs-org-classification.md
infra/: sudoers.d-wslcb-healthcheck  wslcb-address-validation.timer  wslcb-disk-hygiene.timer  wslcb-task@.service  wslcb-web.service
infra/wslcb-task@disk-hygiene.service.d/: override.conf
research/: data_audit_2026-02-26.md
scripts/: build-css.sh  doc-check.sh  download-tailwind.sh  install-hooks.sh  pre-commit-tailwind.sh  sqlite_to_pg.py
skills/: brainstorming  dispatching-parallel-agents  managing-skills  managing-skills-claude  orchestrating-issue-backlog  orchestrating-issue-backlog-claude  reviewing-architecture  reviewing-architecture-claude  reviewing-code-python-fastapi  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  verification-before-completion  writing-plans  writing-skills
skills/brainstorming/: SKILL.md
skills/reviewing-code-claude/: SKILL.md
skills/shipping-work-claude/: SKILL.md
skills/shipping-work-python-fastapi/: SKILL.md
skills/using-git-worktrees/: SKILL.md
src/wslcb_licensing_tracker/: __init__.py  address_client.py  address_validator.py  admin_audit.py  admin_auth.py  admin_endorsement_routes.py  admin_routes.py  api_routes.py  app.py  backfill_diffs.py  backfill_provenance.py  backfill_snapshots.py  cli.py  config.py  data_migration.py  database.py  db.py  disk_hygiene.py  display.py  endorsements.py  endorsements_admin.py  endorsements_seed.py  engine.py  entities.py  integrity.py  link_records.py  models.py  (+38 more)
templates/: 404.html  base.html  detail.html  entities.html  entity.html  index.html  search.html
tests/: TEST_PATTERNS.md  cli_helpers.py  conftest.py  test_address_validator.py  test_admin_audit.py  test_admin_auth.py  test_admin_endorsements.py  test_admin_routes.py  test_admin_users.py  test_admin_users_pg.py  test_api_routes.py  test_app.py  test_backfill_diffs.py  test_backfill_snapshots.py  test_cache_removal.py  test_cli.py  test_cli_scrape.py  test_config.py  test_data_migration.py  test_database.py  test_db.py  test_disk_hygiene.py  test_display.py  test_endorsements.py  test_endorsements_admin.py  test_endorsements_seed.py  test_engine.py  test_entities.py  test_integrity.py  test_link_records.py  test_models.py  test_parser.py  test_pg_address_validator.py  test_pg_admin_audit.py  test_pg_admin_auth.py  test_pg_admin_users.py  test_pg_backfill_diffs.py  test_pg_backfill_snapshots.py  test_pg_database.py  test_pg_db.py  (+20 more)
(+33 files in other folders)
