[project]
name = "wslcb-licensing-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0,<1",
    "uvicorn>=0.41.0,<1",
    "Jinja2>=3.1.6,<4",
    "httpx>=0.28.1,<1",
    "beautifulsoup4>=4.14.3,<5",
    "lxml>=6.0.2,<7",
    "python-multipart>=0.0.22,<1",
    "python-json-logger>=4.0.0,<5",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.13,<2",
    "asyncpg>=0.30,<1",
]

[project.scripts]
wslcb = "wslcb_licensing_tracker.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.15.0,<1",
    "pre-commit>=4.0.0,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wslcb_licensing_tracker"]

[tool.ruff]
line-length = 100
src = ["src"]
exclude = ["tests/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Mutually exclusive docstring rules — pick D211 + D212
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    # Conflicts with ruff formatter
    "COM812", # trailing-comma-missing
    "ISC001", # single-line-implicit-string-concatenation
    # Deprecated
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    # All SQL uses parameterized queries; dynamic parts are constants or
    # generated placeholders (e.g. ",".join("?" * n)) — not user input.
    "S608",   # possible-sql-injection-vector
]

[tool.ruff.lint.per-file-ignores]
# print() is legitimate CLI output per project convention
"src/wslcb_licensing_tracker/cli.py" = ["T201"]
"src/wslcb_licensing_tracker/integrity.py" = ["T201"]
"src/wslcb_licensing_tracker/pg_integrity.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
